--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -118,12 +118,12 @@
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\"\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\pulses\\\\PiJump\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "print(f.read(1500))\n",
-    "outdir='D:\\\\doc\\\\data\\\\pulse'"
+    "outdir=dir"
    ]
   },
   {
