--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -180,16 +180,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TimeTurn=-20\n",
-    "# turnPoint=0\n",
-    "if os.path.exists(dir+'laser.dat'):\n",
-    "    TimeBegin =(min(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
-    "    TimeEnd   =(max(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
-    "    dt=np.loadtxt(dir+'Laser.dat')[1,0]-np.loadtxt(dir+'Laser.dat')[0,0]\n",
-    "elif os.path.exists(dir+'laserField.dat'):\n",
+    "\n",
+    "\n",
+    "if os.path.exists(dir+'laserField.dat'):    \n",
     "    TimeBegin =(min(np.loadtxt(dir+'Laserfield.dat')[:,0]))\n",
     "    TimeEnd   =(max(np.loadtxt(dir+'Laserfield.dat')[:,0]))\n",
     "    dt=np.loadtxt(dir+'LaserField.dat')[1,0]-np.loadtxt(dir+'LaserField.dat')[0,0]\n",
+    "elif os.path.exists(dir+'laser.dat'):\n",
+    "    TimeBegin =(min(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
+    "    TimeEnd   =(max(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
+    "    dt=np.loadtxt(dir+'Laser.dat')[1,0]-np.loadtxt(dir+'Laser.dat')[0,0]\n",
     "else:\n",
     "    print('Cant find the data file')\n",
     "TimeTurn=(min(np.loadtxt(dir+'timeenergyspctra.dat')[:,0])) \n",
@@ -200,7 +200,11 @@
     "turnPoint= 0\n",
     "turnPoint= int((TimeTurn-TimeBegin)/dt)\n",
     "print(' TurnPoint=',turnPoint)\n",
-    "print(' Begin time:',TimeBegin,timeUnit+'\\n End time  :',TimeEnd,timeUnit+' \\n Turn time :',TimeTurn,timeUnit)"
+    "print(' Begin time:',TimeBegin,timeUnit+'\\n End time  :',TimeEnd,timeUnit+' \\n Turn time :',TimeTurn,timeUnit)\n",
+    "TimeTurn=0\n",
+    "turnPoint=0\n",
+    "TimeBegin=0\n",
+    "TimeEnd=150\n"
    ]
   },
   {
@@ -828,6 +832,43 @@
    "outputs": [],
    "source": [
     "data=np.loadtxt(dir+\"ori_ali_2.dat\")\n",
+    "datapop=np.loadtxt(dir+\"PopulationOfState.dat\")\n",
+    "yp=datapop[:,2]\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]/datapop[:,2]\n",
+    "plt.plot(x,y2,'k-')\n",
+    "\n",
+    "plt.ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.savefig(dir+\"ExcitedAlignmentfix.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"ori_ali_2.dat\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "plt.plot(x,y2,'k-')\n",
+    "plt.ylabel('$p_{\\\\rm{exc}} \\\\times \\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.savefig(dir+\"ExcitedAlignment.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"ori_ali_2.dat\")\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
@@ -836,14 +877,14 @@
     "\n",
     "color = 'tab:red'\n",
     "ax1.set_xlabel('Time ('+timeUnit+')')\n",
-    "ax1.set_ylabel('$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
+    "ax1.set_ylabel('$p_{\\\\rm{exc}} \\\\times \\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
     "ax1.plot(x, y1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
     "sciforyax(ax1)\n",
     "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "\n",
     "color = 'tab:blue'\n",
-    "ax2.set_ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.set_ylabel('$p_{\\\\rm{exc}} \\\\times \\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
     "ax2.plot(x, y2,'--', color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "sciforyax(ax2)\n",
@@ -980,10 +1021,11 @@
     "plt.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
     "sciforyax(ax1)\n",
-    "plt.legend()\n",
+    "plt.legend(loc=0)\n",
     "#ax.set_title('World population')\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Energy (a.u.)')\n",
+    "\n",
     "ax2=plt.axes([0.55,0.55,0.35,0.35])\n",
     "setlabel(ax2,'(b)')\n",
     "data=np.loadtxt(dir+'eneTRJVexc.dat')\n",
@@ -997,9 +1039,9 @@
     "# fig, ax = plt.subplots()\n",
     "plt.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "plt.xlim(TimeTurn,TimeEnd)\n",
+    "# plt.xlim(TimeTurn,TimeEnd)\n",
     "sciforyax(ax2)\n",
-    "plt.legend()\n",
+    "plt.legend(loc=\"center\")\n",
     "#ax.set_title('World population')\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Energy (a.u.)')\n",
@@ -1017,7 +1059,7 @@
     "# fig, ax = plt.subplots()\n",
     "plt.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "plt.xlim(TimeTurn,TimeEnd)\n",
+    "# plt.xlim(TimeTurn,TimeEnd)\n",
     "sciforyax(ax3)\n",
     "plt.legend()\n",
     "#ax.set_title('World population')\n",
@@ -1037,9 +1079,9 @@
     "}\n",
     "ax4.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "plt.xlim(TimeTurn,TimeEnd)\n",
+    "# plt.xlim(TimeTurn,TimeEnd)\n",
     "sciforyax(ax4)\n",
-    "plt.legend()\n",
+    "plt.legend(loc='center')\n",
     "#ax.set_title('World population')\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Energy (a.u.)')\n",
@@ -1057,12 +1099,12 @@
     "data1=np.loadtxt(dir+'eneTRJVgro.dat')\n",
     "data2=np.loadtxt(dir+'eneTRJVexc.dat')\n",
     "data3=np.loadtxt(dir+'eneTRJVion.dat')\n",
-    "t = data[:,0]\n",
+    "t = data2[:,0]\n",
     "outDir=dir\n",
     "population_by_continent = {\n",
-    "    'Translation': data1[:,1]+data2[:,1]+data3[:,1],\n",
-    "    'Rotation':  data1[:,2]+data2[:,2]+data3[:,2],\n",
-    "    'Potential':  data1[:,3]+data2[:,3]+data3[:,3],\n",
+    "    # 'Translation': data2[:,1],\n",
+    "    'Rotation': data2[:,2],\n",
+    "    # 'Potential':  data2[:,3],\n",
     "}\n",
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
@@ -1072,7 +1114,7 @@
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
     "sciforyax(ax)\n",
-    "plt.savefig(outDir+'EnergyRJVtot.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.savefig(outDir+'EnergyRJVexc.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -1134,9 +1176,7 @@
     "                    wspace=0.25, \n",
     "                    hspace=0.25)\n",
     "plt.savefig(outDir+'Ks.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
-    "\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
