--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -269,7 +269,7 @@
     "#plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=(0.55,0.7))\n",
     "plt.legend([\"pump\",\"probe\"],loc=(0.6,0.2))\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "ax3=plt.subplot(2,2,3)\n",
+    "ax4=plt.subplot(2,2,4)\n",
     "data=np.loadtxt(intDir+\"Laser.dat\")\n",
     "np.savetxt(dir+\"data\\\\f3(34).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
@@ -277,15 +277,15 @@
     "y2=data[:,5]\n",
     "y3=data[:,6]\n",
     "plt.xlim(min(x),max(x))\n",
-    "setlabel(ax3,'(c)')\n",
-    "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
+    "setlabel(ax4,'(d)')\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--')#,x,y3,'b-.',x,-y3,'b-.')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "# plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=legengLoc)\n",
     "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "ax4=plt.subplot(2,2,4)\n",
-    "setlabel(ax4,'(d)')\n",
+    "ax3=plt.subplot(2,2,3)\n",
+    "setlabel(ax3,'(c)')\n",
     "data=np.loadtxt(intDir+\"Laser.dat\")\n",
     "x1=data[:,0]\n",
     "y1=data[:,1]\n",
@@ -295,17 +295,20 @@
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "\n",
-    "plt.plot(x1,y1,'k-',x1,y2,'r-',x,y3,'b-',)\n",
+    "plt.plot(x1,y1,'k-',x1,y2,'r-')#,x,y3,'b-',)\n",
     "# plt.legend([\"pump1\",\"pump2\",'probe'],loc=legengLoc)\n",
     "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "plt.tight_layout()\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "plt.subplots_adjust(left=0.1,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.3)\n",
-    "plt.savefig(dir+\"picture\\\\f3TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "# plt.subplots_adjust(left=0.05,\n",
+    "#                     bottom=0.05, \n",
+    "#                     right=0.95, \n",
+    "#                     top=0.95, \n",
+    "#                     wspace=0.3, \n",
+    "#                     hspace=0.3)\n",
+    "\n",
+    "plt.savefig(dir+\"picture\\\\f3TimeFrequencyDistribution.\"+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.show()"
    ]
   },
   {
