--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -160,7 +160,7 @@
     "dir='D:\\\\doc\\\\data\\\\2060\\\\'\n",
     "# \n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\pulses\\\\chirp\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -201,9 +201,9 @@
     "turnPoint= int((TimeTurn-TimeBegin)/dt)\n",
     "print(' TurnPoint=',turnPoint)\n",
     "print(' Begin time:',TimeBegin,timeUnit+'\\n End time  :',TimeEnd,timeUnit+' \\n Turn time :',TimeTurn,timeUnit)\n",
-    "TimeTurn=0\n",
+    "TimeTurn=-50\n",
     "turnPoint=0\n",
-    "TimeBegin=0\n",
+    "TimeBegin=-50\n",
     "TimeEnd=150\n"
    ]
   },
@@ -376,6 +376,65 @@
     "plt.tight_layout()\n",
     "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.ticker as mtick\n",
+    "plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
+    "ax=plt.subplot(1,3,1)\n",
+    "setlabel(ax,\"(a)\")\n",
+    "plt.title(\"Electrical field\")\n",
+    "data=np.loadtxt(dir+\"laser.dat\")\n",
+    "# np.savetxt(dir+\"EF\"+name+\".dat\",data)\n",
+    "x1=data[:,0]\n",
+    "y1=data[:,1]+data[:,2]+data[:,3]\n",
+    "y=data[:,4]\n",
+    "#####plt.title(\"(a)\",titleLoc)\n",
+    "plt.plot(x1,y1,'k-')#,x1,y,'b--')\n",
+    "sciforyax(ax)\n",
+    "# ax.xaxis.set_major_formatter(mtick.FormatStrFormatter('%.2e'))\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "if (max(y1)>10):\n",
+    "    plt.ylabel(\"Instensity (V/m)\")\n",
+    "else:\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "#plt.xlim(19,21)\n",
+    "plt.plot(x1,y,'r--')\n",
+    "# plt.title(\"Enevlope\")\n",
+    "\n",
+    "ax=plt.subplot(1,3,3)\n",
+    "setlabel(ax,\"(c)\")\n",
+    "plt.title(\"Frequency  distribution\")\n",
+    "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "# np.savetxt(dir+\"FD\"+name+\".dat\",data)\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(y,x,'k-')\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "plt.xlabel(\"Intensity (arb.units)\")\n",
+    "sciforyax(ax)\n",
+    "\n",
+    "ax=plt.subplot(1,3,2)\n",
+    "setlabel(ax,\"(b)\")\n",
+    "plt.title(\"Spectrum\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "# np.savetxt(dir+\"TFD\"+name+\".dat\",data)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# plt.colorbar(pad= 0.05)\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "sciforyax(ax)\n",
+    "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
+    "# os.startfile(dir)\n",
+    "os.startfile(dir+\"LaserTimFreDis1.\"+figureType)"
    ]
   },
   {
@@ -837,8 +896,9 @@
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]/datapop[:,2]\n",
+    "ax=plt.gca()\n",
     "plt.plot(x,y2,'k-')\n",
-    "\n",
+    "sciforyax(ax)\n",
     "plt.ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.savefig(dir+\"ExcitedAlignmentfix.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
@@ -924,7 +984,7 @@
     "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
     "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
     "setlabel(ax1,\"(a)\")\n",
-    "plt.xlim(x[0]/2,max(x)-x[0])\n",
+    "plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(-0.5,5.5)\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$V$')\n",
@@ -1931,7 +1991,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit (microsoft store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1945,12 +2005,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
