--- a/Python/mplot.ipynb
+++ b/Python/mplot.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir=\"D:\\\\mplot\\\\\"\n",
+    "dir=\"D:\\\\doc\\\\data\\\\matrix\\\\t1\\\\\"\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "import os\n",
@@ -139,7 +139,7 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(x,y)\n",
-    "plt.xlim(0,5)\n",
+    "# plt.xlim(0,5)\n",
     "plt.xlabel(\"Time (ps)\")\n",
     "plt.ylabel(\"Instensity (V/m)\")\n",
     "plt.savefig(dir+\"pulse.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
@@ -165,7 +165,7 @@
     "ax1.set_ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$', color=color)\n",
     "ax1.plot(x, y1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "plt.xlim(0, 5)\n",
+    "# plt.xlim(0, 5)\n",
     "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "\n",
     "color = 'tab:blue'\n",
@@ -184,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.ticker import MaxNLocator\n",
     "data =np.loadtxt(dir+\"pop_j_t.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
@@ -206,18 +207,56 @@
     "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
     "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
     "# setlabel(ax1,\"(a)\")\n",
-    "plt.xlim(x[0]/2,max(x)-x[0])\n",
+    "# plt.xlim(x[0]/2,max(x)-x[0])\n",
     "plt.ylim(-0.5,5.5)\n",
     "plt.xlabel('Time (ps)')\n",
     "plt.ylabel('$J$')\n",
     "plt.colorbar(format=cbformat)\n",
     "plt.savefig(dir+\"pop_j_.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legend=[]\n",
+    "data1=np.loadtxt(dir+'population_4.dat')\n",
+    "data2=np.loadtxt(dir+'population_8.dat')\n",
+    "data3=np.loadtxt(dir+'population_12.dat')\n",
+    "plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
+    "ax=plt.subplot(1,3,1)\n",
+    "t=data1[:,0] \n",
+    "for i in range(0,data1.shape[1]-1):\n",
+    "    plt.plot(t,data1[:,i+1])\n",
+    "    legend.append(\"$J=$\"+str(i))\n",
+    "plt.legend(legend)\n",
+    "legend=[]\n",
+    "ax=plt.subplot(1,3,2)\n",
+    "for i in range(0,data2.shape[1]-1):\n",
+    "    plt.plot(t,data2[:,i+1])\n",
+    "    legend.append(\"$J=$\"+str(i+5))\n",
+    "ax.legend(legend)\n",
+    "legend=[]\n",
+    "ax=plt.subplot(1,3,3)\n",
+    "for i in range(0,data3.shape[1]-1):\n",
+    "    plt.plot(t,data3[:,i+1])\n",
+    "    legend.append(\"$J=$\"+str(i+9))\n",
+    "ax.legend(legend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit (microsoft store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -231,12 +270,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
