--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -298,14 +298,14 @@
     "plt.plot(x1,y1,'k-',x1,y2,'r-')#,x,y3,'b-',)\n",
     "# plt.legend([\"pump1\",\"pump2\",'probe'],loc=legengLoc)\n",
     "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
-    "plt.tight_layout()\n",
+    "# plt.tight_layout()\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "# plt.subplots_adjust(left=0.05,\n",
-    "#                     bottom=0.05, \n",
-    "#                     right=0.95, \n",
-    "#                     top=0.95, \n",
-    "#                     wspace=0.3, \n",
-    "#                     hspace=0.3)\n",
+    "plt.subplots_adjust(left=0.05,\n",
+    "                    bottom=0.05, \n",
+    "                    right=0.95, \n",
+    "                    top=0.95, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
     "\n",
     "plt.savefig(dir+\"picture\\\\f3TimeFrequencyDistribution.\"+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "plt.show()"
