--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -160,7 +160,7 @@
     "dir='D:\\\\doc\\\\data\\\\2060\\\\'\n",
     "# \n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\pulses\\\\chirp\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -201,10 +201,10 @@
     "turnPoint= int((TimeTurn-TimeBegin)/dt)\n",
     "print(' TurnPoint=',turnPoint)\n",
     "print(' Begin time:',TimeBegin,timeUnit+'\\n End time  :',TimeEnd,timeUnit+' \\n Turn time :',TimeTurn,timeUnit)\n",
-    "TimeTurn=-50\n",
-    "turnPoint=0\n",
-    "TimeBegin=-50\n",
-    "TimeEnd=150\n"
+    "# TimeTurn=-50\n",
+    "# turnPoint=0\n",
+    "# TimeBegin=-50\n",
+    "# TimeEnd=150\n"
    ]
   },
   {
@@ -1293,6 +1293,39 @@
     "                    hspace=0.3)\n",
     "plt.savefig(outDir+'Ktot.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileList =os.listdir(dir+\"PAD\\\\\")\n",
+    "# print(fileList)\n",
+    "dat_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"PAD\\\\\"+str(fileList[i])\n",
+    "    if s[-4:]==\".dat\":\n",
+    "        dat_list.append(s)\n",
+    "n=int(len(dat_list)/2)\n",
+    "data=np.loadtxt(dat_list[n])\n",
+    "x=data[:,2]\n",
+    "y=data[:,3]\n",
+    "z=data[:,4]\n",
+    "ax=plt.gca()\n",
+    "#fig=plt.subplots(2,2)\n",
+    "#fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.title('$t$ = '+fileList[n][13:16]+' fs',loc='left',fontsize=8)\n",
+    "plt.xlabel(\"$\\\\theta$ (degree)\")\n",
+    "plt.ylabel(\"Energy (a.u.)\")\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.savefig(dir+fileList[n][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
