--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -131,6 +131,7 @@
     "    ax.xaxis.set_major_formatter(formatter)\n",
     "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
     "cbformat.set_powerlimits((-1,1))\n",
+    "cbformat.format=\"%.2f\"\n",
     "\n",
     "import matplotlib.ticker\n",
     "class OOMFormatter(matplotlib.ticker.ScalarFormatter):\n",
@@ -666,7 +667,7 @@
     "    plt.xlim(TimeTurn+1, max(x) )\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format=cbformat)\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    ax=plt.subplot(2,2,2)\n",
@@ -898,9 +899,10 @@
     "y2=data[:,2]/datapop[:,2]\n",
     "ax=plt.gca()\n",
     "plt.plot(x,y2,'k-')\n",
-    "sciforyax(ax)\n",
+    "ax.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.2f\"))\n",
     "plt.ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
+    "# plt.yticks(rotation=45)\n",
     "plt.savefig(dir+\"ExcitedAlignmentfix.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
@@ -915,9 +917,11 @@
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
+    "ax=plt.gca()\n",
     "plt.plot(x,y2,'k-')\n",
     "plt.ylabel('$p_{\\\\rm{exc}} \\\\times \\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
+    "ax.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.2f\"))\n",
     "plt.savefig(dir+\"ExcitedAlignment.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
@@ -940,14 +944,15 @@
     "ax1.set_ylabel('$p_{\\\\rm{exc}} \\\\times \\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
     "ax1.plot(x, y1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "sciforyax(ax1)\n",
-    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
+    "ax1.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.3f\"))\n",
     "\n",
+    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "color = 'tab:blue'\n",
     "ax2.set_ylabel('$p_{\\\\rm{exc}} \\\\times \\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
     "ax2.plot(x, y2,'--', color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "sciforyax(ax2)\n",
+    "# sciforyax(ax2)\n",
+    "ax2.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.3f\"))\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "plt.savefig(dir+\"ExcitedAlignmentAndOrientation.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
@@ -1334,16 +1339,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "#plt.grid(False)\n",
+    "\n",
+    "plt.figure(figsize=(24/2.54,18/2.54))\n",
+    "plt.subplot(3,3,1)\n",
     "if os.path.exists(dir+\"TimFreDis1.dat\"):\n",
-    "    plt.figure(figsize=(24/2.54,18/2.54))\n",
     "    data=np.loadtxt(dir+\"Laser.dat\")\n",
     "    x1=data[:,0]\n",
     "    y1=data[:,1]\n",
     "    y2=data[:,2]\n",
     "    y3=data[:,3]\n",
-    "\n",
-    "    plt.subplot(3,3,1)\n",
-    "    #plt.grid(False)\n",
     "    x=x1\n",
     "    y=y1\n",
     "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
@@ -1352,7 +1360,8 @@
     "    plt.xlim(TimeBegin,TimeEnd)\n",
     "    plt.plot(x1,y1,'k-')\n",
     "\n",
-    "    plt.subplot(3,3,2)\n",
+    "plt.subplot(3,3,2)\n",
+    "if os.path.exists(dir+\"FreDis1.dat\"):\n",
     "    dataf=np.loadtxt(dir+\"FreDis1.dat\")\n",
     "    x=dataf[:,0]\n",
     "    y=dataf[:,1]\n",
@@ -1362,7 +1371,8 @@
     "    plt.ylabel(\"Intensity (arb.units)\")\n",
     "    plt.plot(x,y,'k-')\n",
     "\n",
-    "    plt.subplot(3,3,3)\n",
+    "plt.subplot(3,3,3)\n",
+    "if os.path.exists(dir+\"TimFreDis1.dat\"):\n",
     "    dataf=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
     "    x=dataf[:,0]\n",
     "    y=dataf[:,1]\n",
@@ -1372,7 +1382,8 @@
     "    plt.xlabel('Time ('+timeUnit+')')\n",
     "    plt.ylabel('Frequency (a.u.)')\n",
     "\n",
-    "    plt.subplot(3,3,4)\n",
+    "plt.subplot(3,3,4)\n",
+    "if os.path.exists(dir+\"TimFreDis1.dat\"):\n",
     "    #plt.grid(False)\n",
     "    #plt.title(\"(b)\",loc=\"left\")\n",
     "    plt.xlabel('Time ('+timeUnit+')')\n",
@@ -1382,54 +1393,55 @@
     "    x=x1\n",
     "    y=y2\n",
     "    plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(b)\")\n",
-    "    plt.subplot(3,3,5)\n",
-    "    dataf=np.loadtxt(dir+\"FreDis2.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    #plt.grid(False)\n",
-    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "    plt.xlabel('Frequency (a.u.)')\n",
-    "    plt.ylabel(\"Intensity (arb.units)\")\n",
-    "    plt.plot(x,y,'r-')\n",
+    "plt.subplot(3,3,5)\n",
+    "if os.path.exists(dir+\"FreDis2.dat\"):\n",
+    "dataf=np.loadtxt(dir+\"FreDis2.dat\")\n",
+    "x=dataf[:,0]\n",
+    "y=dataf[:,1]\n",
+    "#plt.grid(False)\n",
+    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
+    "plt.xlabel('Frequency (a.u.)')\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "plt.plot(x,y,'r-')\n",
     "\n",
-    "    plt.subplot(3,3,6)\n",
-    "    dataf=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    z=dataf[:,2]\n",
-    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format=cbformat)\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel('Frequency (a.u.)')\n",
-    "    plt.subplot(3,3,7)\n",
-    "    #plt.grid(False)\n",
-    "    x=x1\n",
-    "    y=y3\n",
-    "    plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(c)\")\n",
+    "plt.subplot(3,3,6)\n",
+    "dataf=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
+    "x=dataf[:,0]\n",
+    "y=dataf[:,1]\n",
+    "z=dataf[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('Frequency (a.u.)')\n",
+    "plt.subplot(3,3,7)\n",
+    "#plt.grid(False)\n",
+    "x=x1\n",
+    "y=y3\n",
+    "plt.text(TimeTurn+(TimeEnd-TimeTurn)*0.95,min(y)+(max(y)-min(y))*0.9,\"(c)\")\n",
     "\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel(\"Intensity (a.u.)\")\n",
-    "    plt.xlim(TimeTurn,TimeEnd)\n",
-    "    plt.plot(x1,y3,'b-')\n",
-    "    plt.subplot(3,3,8)\n",
-    "    dataf=np.loadtxt(dir+\"FreDis3.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    #plt.grid(False)\n",
-    "    plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
-    "    plt.xlabel('Frequency (a.u.)')\n",
-    "    plt.ylabel(\"Intensity (arb.units)\")\n",
-    "    plt.plot(x,y,'b-')\n",
-    "    plt.subplot(3,3,9)\n",
-    "    dataf=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
-    "    x=dataf[:,0]\n",
-    "    y=dataf[:,1]\n",
-    "    z=dataf[:,2]\n",
-    "    plt.xlabel('Time ('+timeUnit+')')\n",
-    "    plt.ylabel('Frequency (a.u.)')\n",
-    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar(format=cbformat)\n",
-    "    plt.savefig(dir+\"TimFreDis.\"+figureType,dpi=figureDPI)"
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.plot(x1,y3,'b-')\n",
+    "plt.subplot(3,3,8)\n",
+    "dataf=np.loadtxt(dir+\"FreDis3.dat\")\n",
+    "x=dataf[:,0]\n",
+    "y=dataf[:,1]\n",
+    "#plt.grid(False)\n",
+    "plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.9,\"(a)\")\n",
+    "plt.xlabel('Frequency (a.u.)')\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "plt.plot(x,y,'b-')\n",
+    "plt.subplot(3,3,9)\n",
+    "dataf=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
+    "x=dataf[:,0]\n",
+    "y=dataf[:,1]\n",
+    "z=dataf[:,2]\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('Frequency (a.u.)')\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.savefig(dir+\"TimFreDis.\"+figureType,dpi=figureDPI)"
    ]
   },
   {
