--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -411,7 +411,8 @@
     "setlabel(ax,\"(a)\")\n",
     "plt.title(\"Electrical field\")\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
-    "# np.savetxt(dir+\"EF\"+name+\".dat\",data)\n",
+    "# np.savetxt(\n",
+    "    # dir+\"EF\"+name+\".dat\",data)\n",
     "x1=data[:,0]\n",
     "y1=data[:,1]+data[:,2]+data[:,3]\n",
     "y=data[:,4]\n",
@@ -2086,7 +2087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
