--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -1051,12 +1051,17 @@
     "setlabelm(ax,'(d)',[-0.2,1.1])\n",
     "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\ori_ali_2.dat\")\n",
     "datapop=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\PopulationOfState.dat\")\n",
+    "\n",
     "yp=datapop[:,2]\n",
     "x=data[:,0]\n",
+    "l=int(len(x)/200*25)\n",
     "y1=data[:,1]\n",
-    "y2=data[:,2]/datapop[:,2]\n",
+    "y2=data[:,2]\n",
+    "x2=x[l:]\n",
+    "y22=data[l:,2]/datapop[l:,2]\n",
     "ax=plt.gca()\n",
-    "plt.plot(x,y2,'k-')\n",
+    "plt.plot(x,y2,'k-',x2,y22,'r--')\n",
+    "plt.legend([\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle $\",\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle\\\\cdot \\\\frac{1}{P_{exc}}}$\"],loc=[-0.03,1.05],ncol=2,fontsize=7)\n",
     "import matplotlib.ticker as mtick\n",
     "ax.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.2f\"))\n",
     "plt.ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
@@ -1087,13 +1092,6 @@
     "                    wspace=0.3, \n",
     "                    hspace=0.35)\n",
     "plt.savefig(dir+'picture\\\\f999pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![F9](D:\\\\doc\\\\data\\ion\\picture\\f999pumpExcRadWave.jpeg)"
    ]
   },
   {
@@ -1132,99 +1130,6 @@
     "# plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(-0.5,20.5)\n",
     "plt.colorbar(format=cbformat)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "latex"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "def mkdir(path):\n",
-    "    import os\n",
-    "    path=path.strip()\n",
-    "    path=path.rstrip(\"\\\\\")\n",
-    "    isExists=os.path.exists(path)\n",
-    "    if not isExists:\n",
-    "        os.makedirs(path)\n",
-    "        print(path+'Creat Success')\n",
-    "    else:\n",
-    "        print(path+'The directory already exists')\n",
-    "        return False    \n",
-    "dir='D:\\\\Mplot\\\\'\n",
-    "print('Working directory',dir)\n",
-    "print(\"\\n\")\n",
-    "outdir=dir+'picture\\\\'\n",
-    "mkdir(dir)\n",
-    "mkdir(outdir)\n",
-    "import subprocess\n",
-    "syscom='copy *.FOR  '+dir\n",
-    "os.system(syscom)\n",
-    "os.startfile(dir)\n",
-    "# syscom='gfortran MOD_CONSTANT.FOR  -J '+dir\n",
-    "# # os.system(syscom)\n",
-    "# subprocess.check_call(syscom, shell=True, cwd='C:\\\\Users\\\\ablis\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\MatrixDesity\\\\')\n",
-    "syscom='gfortran MOD_CONSTANT.FOR  DiSSPATIVE.FOR F.FOR GRKT1.FOR THREEJ.FOR PULSE.FOR main.FOR -o '+dir+'a.exe'\n",
-    "# os.system(syscom)\n",
-    "subprocess.check_call(syscom, shell=True, cwd=dir)\n",
-    "# subprocess.check_call(syscom,shell=True,cwd=dir)\n",
-    "subprocess.check_call('a.exe', shell=True, cwd=dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(16,13*2))\n",
-    "leg=[]\n",
-    "intDir='D:\\\\doc\\\\data\\\\ion1test\\\\delay\\\\'\n",
-    "plt.subplot(3,1,1)\n",
-    "for i in range(21,331):\n",
-    "    if os.path.exists(intDir+str(i)+'\\\\PopulationOfState.dat'): \n",
-    "        print(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
-    "        data=np.loadtxt(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
-    "        x=data[:,0]\n",
-    "        y1=data[:,1]\n",
-    "        y2=data[:,2]\n",
-    "        y3=data[:,3]\n",
-    "        plt.plot(x,y1,'-')#,x,y3,'--')\n",
-    "        leg.append(\"$P_{Gro}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
-    "        # leg.append(\"$P_{ion}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
-    "plt.legend(leg,loc=0,ncol=3,fontsize=6)\n",
-    "plt.subplot(3,1,2)\n",
-    "for i in range(21,331):\n",
-    "    if os.path.exists(intDir+str(i)+'\\\\PopulationOfState.dat'): \n",
-    "        print(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
-    "        data=np.loadtxt(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
-    "        x=data[:,0]\n",
-    "        y1=data[:,1]\n",
-    "        y2=data[:,2]\n",
-    "        y3=data[:,3]\n",
-    "        plt.plot(x,y2,'-')#,x,y3,'--')\n",
-    "        leg.append(\"$P_{Exc}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
-    "        # leg.append(\"$P_{ion}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
-    "plt.legend(leg,loc='upper left',fontsize=6)\n",
-    "plt.subplot(3,1,3)\n",
-    "for i in range(21,331):\n",
-    "    if os.path.exists(intDir+str(i)+'\\\\PopulationOfState.dat'): \n",
-    "        print(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
-    "        data=np.loadtxt(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
-    "        x=data[:,0]\n",
-    "        y1=data[:,1]\n",
-    "        y2=data[:,2]\n",
-    "        y3=data[:,3]\n",
-    "        plt.plot(x,y3,'--')\n",
-    "        # leg.append(\"$P_{exc}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
-    "        leg.append(\"$P_{Ion}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
-    "plt.legend(leg,loc='upper left',fontsize=6)\n",
-    "plt.savefig(dir+\"picture\\\\fpoptot.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
    ]
   },
   {
@@ -1593,6 +1498,169 @@
     "# for tick in ax.get_yticklabels():\n",
     "#     tick.set_rotation(55)\n",
     "plt.savefig(dir+'f4Wave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdir=\"D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\\"\n",
+    "import os\n",
+    "def mkdir(path):\n",
+    "    import os\n",
+    "    path=path.strip()\n",
+    "    path=path.rstrip(\"\\\\\")\n",
+    "    isExists=os.path.exists(path)\n",
+    "    if not isExists:\n",
+    "        os.makedirs(path)\n",
+    "        print(path+'Creat Success')\n",
+    "    else:\n",
+    "        print(path+'The directory already exists')\n",
+    "        return False    \n",
+    "intfigdir=subdir+'intfig\\\\'\n",
+    "mkdir(intfigdir)\n",
+    "for i in range(20,201,5):\n",
+    "    data=np.loadtxt(subdir+str(i)+\"\\\\qua_int_rad.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z1=data[:,2]\n",
+    "    z2=data[:,3]\n",
+    "    plt.tricontourf(x,y,z2)\n",
+    "    plt.ylim(min(y),10.0)\n",
+    "    plt.xlabel(\"Time (fs)\")\n",
+    "    plt.ylabel(\"$R$\")\n",
+    "    plt.colorbar(format=cbformat)\n",
+    "    plt.title(\"$t_{pp} = $\"+str(i-20)+\" fs\")\n",
+    "    plt.savefig(intfigdir+\"FCtppEq\"+str(i-20)+\".\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)\n",
+    "    plt.close()\n",
+    "os.startfile(subdir)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdir=\"D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\\"\n",
+    "import os\n",
+    "def mkdir(path):\n",
+    "    import os\n",
+    "    path=path.strip()\n",
+    "    path=path.rstrip(\"\\\\\")\n",
+    "    isExists=os.path.exists(path)\n",
+    "    if not isExists:\n",
+    "        os.makedirs(path)\n",
+    "        print(path+'Creat Success')\n",
+    "    else:\n",
+    "        print(path+'The directory already exists')\n",
+    "        return False    \n",
+    "datadir=subdir+\"data\\\\\"\n",
+    "mkdir(datadir)\n",
+    "figdir=subdir+\"figures\\\\\"\n",
+    "mkdir(figdir)\n",
+    "for i in range(20,201,5):\n",
+    "    del fcr\n",
+    "    data=np.loadtxt(subdir+str(i)+\"\\\\qua_int_rad.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z1=data[:,2]\n",
+    "    z2=data[:,3]\n",
+    "    miny=min(y)\n",
+    "    maxy=max(y)\n",
+    "    ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "    # nx=int((max(x)-min(x))/(x[1]-x[0]))+1\n",
+    "    fcr=[0 for x in range(ny)]\n",
+    "    k=0\n",
+    "    while (j+k*ny<len(z2)):\n",
+    "        for j in range(0,ny):\n",
+    "           fcr[j]=z2[j+k*ny]+fcr[j]\n",
+    "        k=k+1\n",
+    "    # # a=[y[0:ny],fcr]\n",
+    "    a=np.ndarray(shape=(ny,2))\n",
+    "    for ii in range(ny):\n",
+    "        a[ii,0]=y[ii]\n",
+    "        a[ii,1]=fcr[ii]\n",
+    "    print(type(data))\n",
+    "    np.savetxt(datadir+\"FCRItppEq\"+str(i-20)+\".txt\",a)\n",
+    "    xx=a[:,0]\n",
+    "    yy=a[:,1]\n",
+    "    # xsmo=np.linspace(xx.min(),yy.min(),300)\n",
+    "    # ysmo=make_interp_spline(xx,Reduce)(xsmo)\n",
+    "    plt.plot(xx,yy)           \n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    plt.xlabel(\"$R$\")\n",
+    "    plt.xlim(min(y),10.0)\n",
+    "    plt.ylim(-0.001,0.025)\n",
+    "    plt.title(\"$t_{pp} = $\"+str(i-20)+\" fs\")\n",
+    "    plt.savefig(figdir+\"FCRItppEq\"+str(i-20)+\".\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)\n",
+    "    plt.close()\n",
+    "# plt.savefig(subdir+\"FCRItppEqTot.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)\n",
+    "os.startfile(subdir)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdir=\"D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\\"\n",
+    "import os\n",
+    "def mkdir(path):\n",
+    "    import os\n",
+    "    path=path.strip()\n",
+    "    path=path.rstrip(\"\\\\\")\n",
+    "    isExists=os.path.exists(path)\n",
+    "    if not isExists:\n",
+    "        os.makedirs(path)\n",
+    "        print(path+'Creat Success')\n",
+    "    else:\n",
+    "        print(path+'The directory already exists')\n",
+    "        return False    \n",
+    "datadir=subdir+\"data\\\\\"\n",
+    "mkdir(datadir)\n",
+    "figdir=subdir+\"figures\\\\\"\n",
+    "mkdir(figdir)\n",
+    "for i in range(20,30,5):\n",
+    "    del fcr\n",
+    "    data=np.loadtxt(subdir+str(i)+\"\\\\qua_int_rad.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z1=data[:,2]\n",
+    "    z2=data[:,3]\n",
+    "    miny=min(y)\n",
+    "    maxy=max(y)\n",
+    "    ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "    # nx=int((max(x)-min(x))/(x[1]-x[0]))+1\n",
+    "    fcr=[0 for x in range(ny)]\n",
+    "    k=0\n",
+    "    while (j+k*ny<len(z2)):\n",
+    "        for j in range(0,ny):\n",
+    "           fcr[j]=z2[j+k*ny]+fcr[j]\n",
+    "        k=k+1\n",
+    "    # # a=[y[0:ny],fcr]\n",
+    "    a=np.ndarray(shape=(ny,2))\n",
+    "    for ii in range(ny):\n",
+    "        a[ii,0]=y[ii]\n",
+    "        a[ii,1]=fcr[ii]\n",
+    "    print(type(data))\n",
+    "    np.savetxt(datadir+\"FCRItppEq\"+str(i)+\".txt\",a)\n",
+    "    xx=a[:,0]\n",
+    "    yy=a[:,1]\n",
+    "    # xsmo=np.linspace(xx.min(),yy.min(),300)\n",
+    "    # ysmo=make_interp_spline(xx,Reduce)(xsmo)\n",
+    "    plt.plot(xx,yy)           \n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    plt.xlabel(\"$R$\")\n",
+    "    plt.xlim(min(y),10.0)\n",
+    "    plt.title(\"$t_{pp} = $\"+str(i)+\" fs\")\n",
+    "    # plt.savefig(figdir+\"FCRItppEq\"+str(i)+\".\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)\n",
+    "    # plt.close()\n",
+    "plt.savefig(subdir+\"FCRItppEqTot.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)\n",
+    "os.startfile(subdir)"
    ]
   }
  ],
