--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -111,6 +111,12 @@
     "    formatter.set_scientific(True)\n",
     "    formatter.set_powerlimits((-2,2))\n",
     "    ax.yaxis.set_major_formatter(formatter)\n",
+    "    \n",
+    "def sciforyax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.yaxis.set_major_formatter(formatter)\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
@@ -1092,6 +1098,171 @@
     "                    wspace=0.3, \n",
     "                    hspace=0.35)\n",
     "plt.savefig(dir+'picture\\\\f999pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdir='D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\data\\\\'\n",
+    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "ax=plt.subplot(2,2,1)\n",
+    "setlabel(ax, '(a)')\n",
+    "data=np.loadtxt(subdir+'FCRItppEq40.txt')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(x,y)\n",
+    "data=np.loadtxt(subdir+'FCRItppEq60.txt')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(x,y)\n",
+    "data=np.loadtxt(subdir+'FCRItppEq80.txt')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(x,y)\n",
+    "data=np.loadtxt(subdir+'FCRItppEq100.txt')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(x,y)\n",
+    "plt.xlabel(\"$R$ (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "plt.xlim(min(x),10.0)\n",
+    "sciforyax(ax)\n",
+    "plt.legend([\"$t_{pp}=40 fs$\",\"$t_{pp}=600 fs$\",\"$t_{pp}=80 fs$\",\"$t_{pp}=100 fs$\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdir='D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\data\\\\'\n",
+    "datafc=np.loadtxt(subdir+'FCRItppEq0.txt')\n",
+    "l=len(datafc)\n",
+    "trp=np.ndarray(shape=(l*37,3))\n",
+    "for i in range(0,37):\n",
+    "    datafc=np.loadtxt(subdir+'FCRItppEq'+str(i*5)+'.txt')\n",
+    "    y=datafc[:,0]\n",
+    "    z=datafc[:,1]\n",
+    "    for j in range(0,len(y)):\n",
+    "        trp[j+i*len(y),0]=i*5\n",
+    "        trp[j+i*len(y),1]=y[j]\n",
+    "        trp[j+i*len(y),2]=z[j]\n",
+    "np.savetxt(subdir+'trp.dat',trp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(subdir+\"trp.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "t=np.ndarray(shape=(int(len(x)/128),1))\n",
+    "p=np.ndarray(shape=(int(len(x)/128),1))\n",
+    "for i in range(0,int(len(x)/128)):\n",
+    "    t[i]=x[i*128+1]\n",
+    "    for j in range(0,128):\n",
+    "        p[i]=p[i]+z[i*128+j]\n",
+    "plt.plot(t,p)        \n",
+    "# plt.tricontourf(x,y,z,levels=200,cmap='jet')\n",
+    "# plt.ylim(min(y),10.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
+    "subdir='D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\data\\\\'\n",
+    "ax=plt.axes([0.10,0.55,0.35,0.35])\n",
+    "setlabelm(ax,'(a)',[-0.2,1.1])\n",
+    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%.3f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "# plt.xlim(0,150)\n",
+    "plt.ylim(min(y),10)\n",
+    "\n",
+    "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
+    "setlabelm(ax,'(b)',[-0.2,1.1])\n",
+    "data=np.loadtxt(subdir+\"trp.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%.3f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "plt.ylim(min(y),10.0)\n",
+    "plt.xlabel('$t_{pp}$ (fs)')\n",
+    "plt.ylabel('$R$ (a.u.)')\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.55,0.10,0.35,0.28])\n",
+    "setlabelm(ax,'(d)',[-0.2,1.1])\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\ori_ali_2.dat\")\n",
+    "datapop=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\PopulationOfState.dat\")\n",
+    "\n",
+    "yp=datapop[:,2]\n",
+    "x=data[:,0]\n",
+    "l=int(len(x)/200*25)\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "x2=x[l:]\n",
+    "y22=data[l:,2]/datapop[l:,2]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(x,y2,'k-',x2,y22,'r--')\n",
+    "plt.legend([\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle $\",\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle\\\\cdot \\\\frac{1}{P_{exc}}}$\"],loc=[-0.03,1.05],ncol=2,fontsize=7)\n",
+    "import matplotlib.ticker as mtick\n",
+    "ax.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.2f\"))\n",
+    "plt.ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.1,0.1,0.35,0.35])\n",
+    "setlabelm(ax,'(c)',[-0.2,1.1])\n",
+    "data =np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\Excangwave.dat')\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]/180\n",
+    "z=data[:,2]\n",
+    "# plt.xlim(TimeTurn+1,TimeEnd)\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%.3f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
+    "\n",
+    "\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.35)\n",
+    "plt.savefig(dir+'picture\\\\f9ExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
