--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -130,7 +130,7 @@
     "    formatter.set_powerlimits((0,0))\n",
     "    ax.xaxis.set_major_formatter(formatter)\n",
     "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
-    "cbformat.set_powerlimits((-1,1))\n",
+    "cbformat.set_powerlimits((-0,0))\n",
     "cbformat.format=\"%.2f\"\n",
     "\n",
     "import matplotlib.ticker\n",
@@ -176,6 +176,7 @@
     "# \n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "if fee(dir+\"alog.dat\"):\n",
@@ -1736,7 +1737,7 @@
     "\n",
     "plt.subplot(2,1,1)\n",
     "plt.tricontourf(x,y,z1,levels,cmap='jet')#,vmin=0.0,vmax=0.1)\n",
-    "plt.colorbar(format=cbformat)\n",
+    "plt.colorbar()\n",
     "plt.xlim(TimeTurn+1,max(x))\n",
     "plt.ylim(min(y),11)\n",
     "plt.xlabel(\"Time (fs)\")\n",
@@ -1757,6 +1758,90 @@
     "                    hspace=0.2)\n",
     "plt.savefig(dir+\"QuaIntRad.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8/2.54,13/2.54))\n",
+    "data=np.loadtxt(dir+\"FCrad.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "\n",
+    "plt.subplot(2,1,1)\n",
+    "plt.tricontourf(x,y,z1,levels,cmap='jet')#,vmin=0.0,vmax=0.1)\n",
+    "plt.colorbar()\n",
+    "plt.xlim(TimeTurn+1,max(x))\n",
+    "plt.ylim(min(y),11)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "plt.subplot(2,1,2)\n",
+    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlim(TimeTurn+1,max(x))\n",
+    "plt.ylim(min(y),11)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.2)\n",
+    "plt.savefig(dir+\"RCRad.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8/2.54,13/2.54))\n",
+    "data=np.loadtxt(dir+\"FCang.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]/180\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "\n",
+    "plt.subplot(2,1,1)\n",
+    "plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlim(TimeTurn+1,max(x))\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
+    "\n",
+    "plt.subplot(2,1,2)\n",
+    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlim(TimeTurn+1,max(x))\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
+    "\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.2)\n",
+    "plt.savefig(dir+\"RCAng.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.startfile(dir)"
    ]
   },
   {
@@ -2087,7 +2172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
